# dotfiles-1

./: LICENSE  README.md  dependencies.md  install.sh
Xorg/: README.md  Xresources  compton.conf  conky_mpd  conkyrc  i3blocks.conf  link.sh  redshift.conf  xinitrc  xprofile
Xorg/awesome-3.5/: README.md  awesome-3.5  rc.lua
Xorg/awesome-3.5/themes/default/: theme.lua
Xorg/awesome-3.5/vicious/: tags
Xorg/dunst/: dunst  dunstrc
Xorg/i3gaps/: .config  README.md  bandwidth.sh  config  i3gaps  mpd.sh  volume.sh
Xorg/polybar/: config  polybar
Xorg/termite/: config  termite
Xorg/xmonad/: .gitignore  Makefile  myXmonad.cabal  stack.yaml  xmonad.state
Xorg/xmonad/src/: Xmonad.hs
editors/: .gitignore  inputrc  link.sh  vimrc
editors/kak/: kakrc
editors/kak/colors/: yumh.kak
editors/kak/plug/: blade.kak  csscompl.kak  gdt.kak  snips.kak  surround.kak  tmux-conf.kak
editors/kak/snips/: fgroup  html  jf
editors/nvim/: init.vim
editors/nvim/spell/: it.utf-8.add  it.utf-8.add.spl
elinks/: elinks.conf  install.sh
emacs/: emacs.el  install.sh
nvim/: install.sh  nvim-full.vim  nvim-lite.vim
scripts/: google  link.sh  shared  tmux-right-side  update_pkg
systemd/: link.sh
systemd/systemd/user/: mpd.service  redshift.service
systemd/systemd/user/default.target.wants/: mpd.service  redshift.service
tmux/: install.sh  tmux.conf
various-stuff/: htoprc  link.sh  remote-tmux.conf  tmux.con  tmux.conf
xmodmap/: install.sh
zsh/: alias  install.sh  link.sh  zlogin  zplugrc  zshenv  zshrc
