name:                myXmonad
version:             0.1.0.0
homepage:            https://github.com/omar-polo/dotfiles/tree/master/Xorg/xmonad
author:              Omar Polo
copyright:           2017 Omar Polo
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable xmonad
  hs-source-dirs:      src
  main-is:             Xmonad.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , xmonad
                     , xmonad-contrib
                     , dbus
                     , X11
                     , X11-xft
                     , libxml-sax
                     , utf8-string
                     , containers
  default-language:    Haskell2010

test-suite myXmonad-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
